--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,64 @@
 {% extends 'base.html' %}
 
-{% block body %}
-    <h1>Login</h1>
+{% block head %}
+    <title>StockMarket - Login</title>
+{% endblock %}
 
-    <a href="{{ url_for('register') }}">Register</a>
+
+{% block body %}
+    <h1 class="text-center py-5">Login</h1>
+
+    <div class="container">
+        <div class="row mx-0 justify-content-center">
+          <div class="col-md-7 col-lg-5 px-lg-2 col-xl-4 px-xl-0 px-xxl-3">
+            {% if error %}
+                <div class="alert alert-danger text-center" role="alert">
+                    {{ error }}
+                </div>
+            {% endif %}
+    
+            <form
+              method="POST"
+              class="w-100 rounded-1 p-4 border bg-white"
+            >
+              <label class="d-block mb-4">
+                <span class="form-label d-block">Email address</span>
+                <input
+                  name="email"
+                  type="email"
+                  class="form-control"
+                  placeholder="Enter Email Address"
+                  required
+                />
+              </label>
+      
+              <label class="d-block mb-4">
+                <span class="form-label d-block">Password</span>
+                <input
+                  name="password"
+                  type="password"
+                  class="form-control"
+                  minlength="6"
+                  placeholder="Enter Password"
+                  required
+                />
+              </label>
+      
+              <div class="mb-3">
+                <button type="submit" class="btn btn-primary px-3 rounded-3">
+                  Sign In
+                </button>
+              </div>
+            
+                <div class="text-center">
+                    <span class="d-block">Don't have an account?</span>
+                    <a href="{{ url_for('register') }}" class="text-decoration-none">Register</a>
+                </div>
+
+            </form>
+          </div>
+        </div>
+      </div>
+      
+    
 {% endblock %}
