--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,64 @@
 {% extends 'base.html' %}
 
-{% block body %}
-    <h1>Welcome to the DashBoard</h1>
+{% block head %}
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+{% endblock %}
 
+{% block body %}
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#">MarketWatch</a>
+
+                    <h4 class="flex-grow-1 text-center">Welcome, {{ session['username'] }}</h4>
+                 
+                    <a href="{{ url_for('logout') }}" class="btn btn-danger right">Logout</a>
+                </nav>
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="row p-4">
+        <form method="POST">    
+            <label for="stock" class="form-label">Select Stock</label>
+            <div class="d-flex flex-row gap-3"> 
+                <select class="form-select" id="stock" name="stock">
+                    <option value="IBM" selected>IBM</option>
+                    <option value="AAPL">Apple</option>
+                    <option value="GOOGL">Google</option>
+                    <option value="MSFT">Microsoft</option>
+                    <option value="AMZN">Amazon</option>
+                </select>
+                <button class="btn btn-primary" type="submit">Search</button>
+            </div>   
+        </form>
+    </div>
+
+    <div class="d-flex flex-column align-items-center">
+        <h5 class="text-center">Stock: {{ stock_symbol }}</h5>
+        <form action="{{ url_for('dashboard_subscribe') }}">
+            <input type="hidden" name="stock" value="{{ stock_symbol }}">
+            <button class="btn btn-warning" type="submit">Subscribe</button>
+        </form>
+    </div>
+  
+    <div class="row p-4">
+
+        <div class="card mb-4 m-auto" style="width: 90%;" data-aos="slide-up">
+            <div class="card-body">
+                <div id="chart" class="chart"></div>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+    <script type='text/javascript'>
+        var graphs = {{graphJSON | safe}};
+        Plotly.plot('chart',graphs,{});
+    </script>
 
 {% endblock %}
